tearchan-horde/src/v2/action/snapshots/tearchan_horde__v2__action__collection__test__typed_any_map_grouped_by_entities-2.snap
---
source: tearchan-horde/src/v2/action/collection.rs
expression: "collection.get::<JumpState>()"

---
Some(
    [
        Action {
            raw: JumpState,
            entity_id: 2,
            ty: Start {
                start: 0,
                end: 0,
                each: false,
            },
        },
    ],
)
