tearchan-horde/src/v2/action/snapshots/tearchan_horde__v2__action__collection__test__typed_any_map_grouped_by_entities-5.snap
---
source: tearchan-horde/src/v2/action/collection.rs
expression: "collection.get::<MoveState>()"

---
None
