tearchan-horde/src/v2/action/snapshots/tearchan_horde__v2__action__collection__test__typed_map_vec_grouped_by_entities.snap
---
source: tearchan-horde/src/v2/action/collection.rs
expression: "collection.get::<MoveState>()"

---
Some(
    [
        Action {
            raw: MoveState,
            entity_id: 1,
            ty: Start {
                tick: 0,
                start: 0,
                end: 0,
            },
        },
    ],
)
